--- a/src/components/forms/MyInput/MyInput.module.sass
+++ b/src/components/forms/MyInput/MyInput.module.sass
@@ -5,10 +5,11 @@
     width: 500px
     height: 50px
     border-radius: 5px
-    margin: 10px
+    margin-bottom: 20px
     font-size: 16px
     font-weight: 600
     padding-left: 20px
+    display: block
     
     
 .invalid
