--- a/src/components/forms/MyInput/MyInput.module.sass
+++ b/src/components/forms/MyInput/MyInput.module.sass
@@ -1,15 +1,15 @@
 
 .input
-    border: 1px solid #555
-    border-color: #rgba(219, 35, 35, 0.698)
-    width: 500px
+    border-color: transparent
+    width: calc( 100% - 20px ) 
     height: 50px
     border-radius: 5px
     margin-bottom: 20px
     font-size: 16px
     font-weight: 600
-    padding-left: 20px
     display: block
+    padding-left: 20px
+    
     
     
 .invalid
