--- a/src/components/Buttons/Buttons.module.sass
+++ b/src/components/Buttons/Buttons.module.sass
@@ -16,4 +16,11 @@
 .linkStyle
     color: #fff
     text-decoration: none
-
+.border
+    border: 1px solid #fff
+    border-radius: 5px
+.signLogin
+    height: 50px
+    padding: 10px 15px
+    
+ 
