Change error mesage

--- a/src/components/forms/RegisterForm/RegisterForm.module.sass
+++ b/src/components/forms/RegisterForm/RegisterForm.module.sass
@@ -1,7 +1,12 @@
 .regForm
     width: 522px
     display: flex
-    justify-content: space-between
+    flex-direction: column
 
 .fildsLength
-    width: 250px
+    display: flex
+    justify-content: space-between
+.inputContainer
+    position: relative
+    
+    
