--- a/src/components/Buttons/Buttons.module.sass
+++ b/src/components/Buttons/Buttons.module.sass
@@ -9,6 +9,10 @@
     border-color: transparent
     border-radius: 5px
     margin: 10px
+    cursor: pointer
+    &:hover
+        opacity: 0.8
+        border: 1px solid #000
 .login
     background-color: #28d2d0
     text-align: center
