--- a/src/components/forms/MyInput/MyInput.module.sass
+++ b/src/components/forms/MyInput/MyInput.module.sass
@@ -4,19 +4,33 @@
     width: calc( 100% - 20px ) 
     height: 50px
     border-radius: 5px
-    margin-bottom: 20px
+    margin: 0 -2px 20px
     font-size: 16px
     font-weight: 600
     display: block
-    padding-left: 20px
-    
-    
+    padding-left: 20px  
+
     
 .invalid
-
+ border: 2px solid #rgba(231, 68, 18, 0.698)
 .valid
-    border-color: #rgba(35, 219, 66, 0.698)
+    border: 2px solid #rgba(35, 219, 66, 0.698)
 
 .errorMsg
-    background-color: rgba(168, 37, 37, 0.698)
+    background-color: #c55
     color: white
+    border: 1px solid transparent
+    line-height: 54px
+    border-radius: 5px
+    width: 245px
+    text-align: center
+    
+
+.left
+    position: absolute
+    top: 0
+    left: -260px
+.right
+    position: absolute
+    top: 0
+    right: -260px
